--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,7 @@
+[user]
+
+	name = "Juniper Belmont"
+
 [alias]
 
 	# View abbreviated SHA, description, and history graph of the latest 20 commits
@@ -5,6 +9,10 @@
 
 	# View the current working tree status using the short format
 	s = status -s
+
+	# Quickly see status
+	s = status
+	st = status
 
 	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
@@ -76,6 +84,9 @@
 		fi \
 	}; f"
 
+[init]
+	templatedir = ~/.gittemplates
+
 [apply]
 
 	# Detect whitespace errors when applying a patch
@@ -128,7 +139,7 @@
 [commit]
 
 	# https://help.github.com/articles/signing-commits-using-gpg/
-	gpgsign = true
+	# gpgsign = true
 
 [diff]
 
