--- a/.gitconfig
+++ b/.gitconfig
@@ -23,8 +23,8 @@
 	# Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
 
-	# Clone a repository including all submodules
-	c = clone --recursive
+	# Short commit
+	c = commit
 
 	# Commit all changes
 	ca = !git add -A && git commit -av
